Fix: 404 heading letter spacing

--- a/src/css/modules/404.module.css
+++ b/src/css/modules/404.module.css
@@ -10,6 +10,7 @@
 }
 
 .container404 > h1 {
+    letter-spacing: 5px;
     margin-bottom: 0;
     color: var(--light);
     font-weight: normal;
